<resources>
    <string name="app_name">jalan jalan</string>

    <!-- Signup and signin activity related. -->
    <string name="signup_page_title">Let\'s get started!</string>
    <string name="signup_button">Let\'s go!</string>
    <string name="go_signin">Been here before? Sign in.</string>

    <string name="signin_page_title">Glad to have you back!</string>
    <string name="signin_button">This way!</string>
    <string name="go_signup">First time here? Sign up.</string>

    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>

    <string name="signout_button">Sign out</string>

    <!-- Home and Group activity related. -->
    <string name="lets_explore">Ready to explore?</string>
    <string name="about_groups">To get you started quickly, here\'s some trail groups!</string>
    <string name="why_not">Why not give this a shot?</string>

    <!-- Filter activity and results related. -->
    <string name="choose_filters">Select your filters.</string>
    <string name="duration">Duration</string>
    <string name="type">Type</string>
    <string name="go">Let\'s find some trails!</string>
    <string name="duration_short">Short (1 &#8211; 2h)</string>
    <string name="duration_medium">Medium (2 &#8211; 3h)</string>
    <string name="duration_long">Long (3 &#8211; 4h)</string>

    <string name="type_both">A bit of both!</string>
    <string name="type_urban">Urban</string>
    <string name="type_nature">Nature</string>

    <string name="filterResult">Take your pick!</string>

    <!-- Navigation drawer and toolbar related. -->
    <string name="temp_drawer_welcome">Welcome to Jalan Jalan!</string>
    <string name="home">Home</string>
    <string name="signout">Sign Out</string>
    <string name="filter">Filter By Criteria</string>
    <string name="all_trails">All Trails</string>
    <string name="history">History</string>
    <string name="all_trails_title">All trails</string>
    <string name="all_trails_description">Check out our entire collection!</string>

    <!-- History activity related. -->
    <string name="history_title">Here\'s your history.</string>
    <string name="history_description">Your past, for your convenience.</string>

    <!-- Maps Activity and POI Display related. -->
    <string name="checking_opening">Checking opening hours...</string>

</resources>
