<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/filterDrawer"
            android:icon="@drawable/ic_filter_list_grey_24dp"
            android:title="@string/filter"/>
        <item
            android:id="@+id/allTrails"
            android:icon="@drawable/ic_view_all_black_24dp"
            android:title="@string/allTrails"/>
        <item
            android:id="@+id/signout"
            android:icon="@drawable/ic_logout_sleep_24dp"
            android:title="@string/signout"
            />
    </group>
</menu>
